Adjusted spacing around contact info for News stories and made an adjustment to the print styles so floorplans print correctly on one sheet.

--- a/src/static/css/print.css
+++ b/src/static/css/print.css
@@ -2,9 +2,11 @@
 	* {
 		font-family: sans-serif !important;
 	}
-	.top, #footer-links, #footer-info, .floor-info p, .floor-info h3, .floor .sp-address {
+	.top, #footer-links, #footer-info, .floor-info p, .floor-info h3, .floorplan .sp-address, .floorplan p, .floorplan h3, .floorplan .sp-address {
 		display: none;
 	}
+
+	
 
 	.mapkey {
 		width: 40% !important;
@@ -14,7 +16,11 @@
 	#maincontent {
 		margin: 1em;
 		padding: 10px;
+		padding-top: 0;
+		margin-top: 0;
 	}
+
+
 
 	.content-area {
 		max-height: auto;
